web/src/scenes/Home/style.scss
/* ... */
@keyframes buynowarrow {
	0% {
		transform: translateX(10px);
	}
	100% {
		transform: translateX(0px);
	}
}

@keyframes buynowtext {
	0% {
		transform: translateX(-10px);
	}
	100% {
		transform: translateX(0px);
	}
}

//top-picks-for-you style start
//gift-cart style start
.gift-cart {
	padding: 30px 0px 0px;
	.gift-cart-image {
		background-color: #051e46;
		margin: 0 auto;
		text-align: center;
		padding: 5px 0px;
		@media (max-width: 767px) {
			padding: 0px;
		}
		img {
			max-height: 112px;
			@media (max-width: 767px) {
				min-height: auto;
				max-width: 100%;
				height: 100%;
				width: 100%;
			}
		}
	}
	@media (max-width: 767px) {
		padding: 20px 0px 0px;
	}
}

//gift-cart style end
//featured events style start
.featured-events {
	background-color: #F0F9FF;
	color: #626262;
	position: relative;
	padding: 40px 0px 0px;
	@media (max-width: 767px) {
		padding: 20px 0px 0px;
    }
    .slick-slide{
        padding: 10px 0;
    }
    .slick-dots{
        top: -35px;
    }
	.grid-container {
		display: grid;
		grid-template-columns: repeat(5, 1fr);
		grid-gap: 0px;
		width: calc(100% + 12px);
		@media(max-width: 991px) {
			grid-template-columns: repeat(5, minmax(35%, 1fr));
			width: 100%;
		}
		@media(min-width: 992px) and (max-width: 1280px) {
			grid-template-columns: repeat(5, minmax(28%, 1fr));
		}
		@media (max-width: 767px) {
			grid-template-columns: repeat(5, minmax(90%, 1fr));
		}
		.item {
			.item-wrapper {
				padding: 8px;
				transition: 0.3s box-shadow, 0.5s background-color, 0.5s transform;
				cursor: pointer;
				position: relative;
				margin-bottom: 10px;
				z-index: 1;
				height: 50%;
				@media (max-width: 767px) {
					padding: 5px;
					height: auto;
				}
				.featured-item-img {
					padding-bottom: 15px;
					position: relative;
					@media(max-width: 768px) {
						padding-bottom: 5px;
					}
					.item-img img {
						@media(max-width: 1366px) {
							height: 100%;
							width: 100%;
							object-fit: cover;
						}
						@media (max-width: 767px) {
							height: auto;
							width: auto;
							max-width: 100%;
						}
					}
					@media (max-width: 767px) {
						padding-bottom: 0px;
					}
					.category {
						position: absolute;
						right: 7px;
						top: 8px;
						opacity: 0;
						transition: 0.7s opacity;
						padding: 0 8px;
						@media(max-width: 991px) {
							opacity: 1;
							position: relative;
							right: 0;
							margin: 5px 0px;
							min-width: auto;
						}
						@media (max-width: 767px) {
							margin: 8px 0px 5px;
							top: 0px;
						}
					}
				}
				h3 {
					padding-bottom: 15px;
					margin: 0px;
					display: inline-block;
					min-height: 55px;
					@media (max-width: 767px) {
						padding-bottom: 8px;
						min-height: auto;
                    }
                    @media(min-width: 1360px) and (max-width: 2200px) {
                        min-height: auto;
                    }
				}
				p {
					padding-bottom: 5px;
					margin: 0px;
					&:last-child {
						padding-bottom: 14px;
					}
				}
				&:after {
					content: "";
					position: absolute;
					top: 0;
					left: 0;
					width: 100%;
					height: 100%;
					transform: scaleY(0);
					transform-origin: bottom center;
					background: #ffffff;
					z-index: -1;
					transition: transform 0.3s;
				}
				&:hover {
					@media(min-width: 767px) {
						box-shadow: 0 2px 27px 0 rgba(0, 0, 0, 0.12);
						transform: translateY(-10px);
						&:after {
							transform: scaleY(1);
						}
						.category {
							opacity: 1;
							top: 8px;
							@media (max-width: 767px) {
								top: 0px;
							}
						}
					}
				}
			}
			@media (max-width: 767px) {
				display: grid;
			}
		}
	}
}

//featured events style end
//currently showing/whats new style start
section.currently-showing,
section.whats-new {
	background-color: #092438;
	padding-bottom: 40px;
	@media (max-width: 767px) {
		padding: 20px 0;
    }
    .slick-slider{
        .slick-track{
            .slick-slide{
                padding: 0 5px;
            }
        }
        .slick-dots{
            top: -35px;
            @media (max-width: 767px) {
                top: -22px;
            }
        }
    } 
	.dots-group {
		span {
			background-color: #ffffff;
			&.active {
				background-color: #0077C8;
			}
		}
	}
	h2 {
		color: #ffffff;
		@media (max-width: 767px) {
			padding-bottom: 15px;
		}
	}
	.grid-container {
		color: #ffffff;
		.item {
			position: relative;
			z-index: 1;
			transition: 0.5s box-shadow;
			.category {
				margin-bottom: 11px;
				@media (max-width: 767px) {
					margin-bottom: 8px;
				}
			}
			.currently-showing-img {
				img {
					width: 100%;
					height: auto;
					transition: 0.5s transform;
					@media(max-width: 1366px) {
						height: 100%;
						width: 100%;
						object-fit: cover;
					}
					@media (max-width: 767px) {
						height: auto;
						width: auto;
						max-width: 100%;
					}
				}
			}
			&:hover {
				@media(min-width: 767px) {
					cursor: pointer;
					h3 {
						color: #0098ff;
					}
				}
				.currently-showing-img {
					&::after {
						position: absolute;
						content: "";
						width: 100%;
						height: auto;
						filter: blur(10px);
						background-color: transparent;
						border-left: 5px solid transparent;
						border-right: 5px solid transparent;
						border-bottom: 20px solid rgba(0, 0, 0, 0.3);
						bottom: 0;
						opacity: 1;
						z-index: -1;
						transition: 0.5s all;
					}
					img {
						transform: translateY(-10px);
					}
				}
			}
		}
	}
	h3 {
		transition: 0.3s color;
		margin-bottom: 0px;
		color: #ffffff;
		min-height: 40px;
        transition: 0.3s color;
        padding-bottom: 13px;
		@media(max-width: 1366px) {
			min-height: 40px;
		}
		@media(max-width: 991px) {
			min-height: auto;
		}
		@media (max-width: 767px) {
            margin-bottom: 8px;
            padding-bottom: 0;
		}
	}
	p {
        color: rgba(255, 255, 255, 0.7);
        margin-bottom: 5px;
	}
}
/* ... */

